--- a/templets/account/list_account.html
+++ b/templets/account/list_account.html
@@ -9,6 +9,7 @@
   {% block title %}Account List{% endblock %}
   {%block content%}
     <h1>account list</h1>
+    <!--{{accounts}}-->
     <table border="1px solid" width="500">
       <tr>
         <th>ID</th>
