--- a/templets/account/update_account.html
+++ b/templets/account/update_account.html
@@ -25,6 +25,25 @@
 </form>
 
 
+<!--    <h1>Update Account</h1>-->
+
+<!--    <form method="POST" enctype="multipart/form-data">-->
+<!--        {% csrf_token %}-->
+
+<!--        <label for="name">Name:</label>-->
+<!--        <input type="text" id="name" name="name" value="{{ account.name }}" required><br><br>-->
+
+<!--        <label for="email">Email:</label>-->
+<!--        <input type="email" id="email" name="email" value="{{ account.email }}" required><br><br>-->
+
+<!--        <label for="password">Password (leave blank to keep current password):</label>-->
+<!--        <input type="password" id="password" name="password"><br/><br/>-->
+
+<!--        <input type="file" name="profile_image" id="profileImageInput" required><br><br>-->
+<!--        <button type="submit">Upload Image</button><br/><br>-->
+
+<!--        <button type="submit">Update Account</button>-->
+<!--    </form>-->
 
 </body>
 </html>
