--- a/templets/base.html
+++ b/templets/base.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Website{% endblock %}</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     {%block style%}
 	{%endblock%}
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'list_account' %}">MyApp</a>
@@ -41,11 +43,13 @@
         </div>
     </nav>
 
+    <!-- Main Content -->
     <div class="container" >
         {% block content %}
         {% endblock %}
     </div>
 
+    <!-- Bootstrap JS (for navbar toggling) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
